--- a/messaging_app/requirements.txt
+++ b/messaging_app/requirements.txt
@@ -4,5 +4,7 @@ django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-nested-routers==0.94.1
+mysqlclient==2.2.7
 PyJWT==2.10.1
+python-dotenv==1.0.1
 sqlparse==0.5.3
