updated Docker Compose for Multi-Container Setup

--- a/messaging_app/messaging_app/docker-compose.yml
+++ b/messaging_app/messaging_app/docker-compose.yml
@@ -1,29 +1,26 @@
 services:
+  db:
+    image: mysql:5.7
+    container_name: mysql
+    restart: always
+    ports:
+      - "3306:3306"
+    env_file:
+      - .env
+    volumes:
+      - db_data:/var/lib/mysql
+  
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver  0.0.0.0:8000
+    container_name: web
     ports:
-      - "8000:8000"  # Expose Django port
-    environment:
-      MYSQL_DB: ${MYSQL_DB}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_HOST: ${MYSQL_HOST} # Reference the database service name
-      MYSQL_PORT: ${MYSQL_PORT}
-    depends_on:
-      - db  # Ensure db starts before web
-
-  db:
-    image: mysql:5.7  # Use a specific MySQL version
-    container_name: mysql
-    environment:
-      MYSQL_DATABASE: ${MYSQL_DB}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_HOST: ${MYSQL_HOST} 
-      MYSQL_PORT: ${MYSQL_PORT}
+      - "8000:8000"
     volumes:
-      - db_data:/var/lib/mysql  # Persist database data
-
+      - .:/app
+    env_file:
+      - .env
+    depends_on:
+      - db
 volumes:
-  db_data:
+  db_data: 
