implemented Docker Compose for Multi-Container Setup

--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -8,11 +8,9 @@ services:
     env_file:
       - .env
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}     # References the MYSQL_PASSWORD from .env
-      MYSQL_DATABASE: ${MYSQL_DB}                # References the MYSQL_DB from .env
+      MYSQL_DB: ${MYSQL_DB}                # References the MYSQL_DB from .env
       MYSQL_USER: ${MYSQL_USER}                  # References the MYSQL_USER from .env
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_HOST: ${MYSQL_HOST}         # References the MYSQL_HOST from .env
     volumes:
       - db_data:/var/lib/mysql
   
@@ -28,11 +26,9 @@ services:
       - .env
     
     environment:
-      DB_HOST: ${MYSQL_HOST}                  # The web service will connect to MySQL using these environment variables
-      DB_PORT: ${MYSQL_PORT}
-      DB_USER: ${MYSQL_USER}
-      DB_PASSWORD: ${MYSQL_PASSWORD}
-      DB_NAME: ${MYSQL_DB}
+      MYSQL_DB: ${MYSQL_DB}                # References the MYSQL_DB from .env
+      MYSQL_USER: ${MYSQL_USER}                  # References the MYSQL_USER from .env
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     depends_on:
       - db
 volumes:
