--- a/messaging_app/messaging_app/docker-compose.yml
+++ b/messaging_app/messaging_app/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   
   web:
     build: .
-    command: python manage.py runserver  0.0.0.0:8000
+    command: python manage.py runserver
     container_name: web
     ports:
       - "8000:8000"
