--- a/messaging_app/messaging_app/blue_deployment.yaml
+++ b/messaging_app/messaging_app/blue_deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: django-messaging-app
+  name: django-messaging-app-blue
 spec:
   replicas: 1  # Set the number of replicas (pods) you need
   selector:
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         app: django-messaging-app
+        version: blue
     spec:
       containers:
       - name: web
@@ -30,16 +31,3 @@ spec:
           value: password
         - name: MYSQL_PORT
           value: "3306"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: django-messaging-app-service
-spec:
-  selector:
-    app: django-messaging-app  # Select pods with the label app: django-messaging-app
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8000  # The port Django app listens on
-  clusterIP: None  # This makes it an internal ClusterIP service
