l Jenkins and Set Up a Pipeline:

--- a/messaging_app/messaging_app/blue_deployment.yaml
+++ b/messaging_app/messaging_app/blue_deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: gcr.io/k8s-minikube/kicbase:latest # Replace with your actual image
+        image: messaging_app-web:latest # Replace with your actual image
         ports:
         - containerPort: 8000
         env:
